# reasy

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  vcpkg.json
.github/actions/configure-cmake/: action.yml
.github/workflows/: cmake.yml
cmake/: dependencies.cmake  googleapis.cmake
proto/: CMakeLists.txt
proto/reasy/: core.proto
proto/reasy/api/v1/: issues.proto  projects.proto  users.proto  workspaces.proto
requests/: issues.http  projects.http  users.http  workspaces.http
src/: CMakeLists.txt  issue.h  main.cpp  project.h  user.h  workspace.h
src/api/: CMakeLists.txt  rpc.h  v1.h  wrapper.h
src/core/: CMakeLists.txt  fixed-string.h  id.h  json.h  log.h
src/db/: CMakeLists.txt  changelog-table.h  init.h  projects-table.h  table.h  users-table.h  workspaces-table.h
src/issues/: CMakeLists.txt  events.h  id.h  issue.cpp  issue.h  issues_service.cpp  issues_service.h  priority.h  status.h
src/projects/: CMakeLists.txt  project.cpp  project.h  projects_service.cpp  projects_service.h
src/users/: CMakeLists.txt  user.cpp  user.h  users_service.cpp  users_service.h
src/workspaces/: CMakeLists.txt  workspace.cpp  workspace.h  workspaces_service.cpp  workspaces_service.h
